--- a/index.html
+++ b/index.html
@@ -5,47 +5,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Student Bio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script>
+            // menu function for about me
+         function firstFunction() {
+            document.getElementById("aboutme").style.display = "block";
+            document.getElementById("portfolio").style.display = "none";
+            document.getElementById("Contact").style.display = "none";
+
+
+            }
+            // menu function for portfolio
+        function secondFunction() {
+            document.getElementById("aboutme").style.display = "none";
+            document.getElementById("portfolio").style.display = "block";
+            document.getElementById("Contact").style.display = "none";
+
+
+            }
+            // menu function for contact
+        function thirdFunction() {
+            document.getElementById("aboutme").style.display = "none";
+            document.getElementById("portfolio").style.display = "none";
+            document.getElementById("Contact").style.display = "block";
+
+
+            }
+
+
+
+    </script>
+
+    <!-- top menu -->
+    <center><div id="Topnav">
+        <p id="title">David Hoffmann</p>
+        <button class="nav" onclick="firstFunction()">About</button>
+        <button class="nav" onclick="secondFunction()">Portfolio</button>
+        <button class="nav" onclick="thirdFunction()">Contact</button>
+
+    </div></center>
+    <br>
+    <br>
+    <br>
 </head>
 <body>
-        <div class="topnav" id="myTopnav">
-                <button class="active" onclick="firstFunction()">About</button>
-                <button class="other" onclick="secondFunction()">Portfolio</button>
-                <button class="other" onclick="thirdFunction()">Contact</button>
-               
-    </div>    
-
-<header>
-<h1 class="h1"style="position:absolute; top:0px; left:10px"> David Hoffmann </h1> 
-</header>
-<br>
-
-<div>
-<p>About Me</p>
+<!-- about me page -->
+<center><div id="aboutme">
+<div id="subtitle">About Me</div>
 
 <br>
+<!-- about me profile img -->
 <img id="profile_img" src="https://media.licdn.com/dms/image/C5603AQGIZt_45AZYkw/profile-displayphoto-shrink_200_200/0?e=1530748800&v=beta&t=4hHiQ_SOwjrNVppLv29_yveke0Eyu9_uT403uaG9yX4">
-
-<p class="float-right"> 
+<p>
 I grew up in the great state of Wisconsin. I graduated from a Olivet Nazarene University in Illinois in 2012 with a B.S. in Criminal Justice. After that I spent 4 years in the Army as a Logistics Officer. The majority of my service was at Fort Riley, KS and southern Afghanistan. After leaving the army I was a distribution center mananger, but I decided to move on to bigger and better things!
 </p>
 
-</div>
-<div>
-<P>Portfolio</P>
+</div></center>
+<!-- portfolio page-->
+<center><div id="portfolio" style="display:none">
+<div id="subtitle">Portfolio</div>
+<br>
+<br>
+<!-- portfolio images -->
+<ol class="list">
+    <li><a href="http://mafia6.com/"><img class="resize" src="https://i.imgur.com/jcrdMQQ.jpg"></a></li>
+    <li><img class="resize" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX8112626.jpg"></li>
+    <li><img class="resize" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX8112626.jpg"></li>
+    <li><img class="resize" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX8112626.jpg"></li>
+    <li><img class="resize" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX8112626.jpg"></li>
+    <li><img class="resize" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX8112626.jpg"></li>
 
 
-</div>
-
-<div>
-<p>Contact</p>
-<ol>
-<li> <a href="mailto:david.p.hoffmann1@gmail.com">Email</a></li>
-<li> <a href="https://github.com/kc9gpj" Target="_blank">Github</a></li>
-<li> <a href="#"> Portfolio Coming Soon</a></li>
 </ol>
+
+
+</div></center>
+<!-- contact page -->
+<center><div id="Contact" style="display:none">
+<div id="subtitle">Contact</div>
+<br>
+<br>
+<div class="container">
+  <form action="/action_page.php">
+    <!-- Name box -->
+    <label for="Name">Name</label>
+    <input type="text" id="Name" name="Name" placeholder="John Smith">
+    <!-- email box -->
+    <label for="Email">Email</label>
+    <input type="text" id="Email" name="Email" placeholder="Example@gmail.com">
+    <!-- text box -->
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" 
+    style="height:200px"></textarea>
+    <!-- submit button -->
+    <input type="submit" value="Submit">
+  </form>
 </div>
+</div></center>
+<br>
+<br>
+<br>
+<div class="navbarbottom">
+    <br>
+       <center><div class=bottomtext>Copyright 2018</div></center>
+        </div>
 
 </body>
 </html>
