--- a/index.html
+++ b/index.html
@@ -53,18 +53,17 @@
 <center><div id="aboutme">
 <div id="subtitle">About Me</div>
 
-<br>
+<hr>
 <!-- about me profile img -->
 <img id="profile_img" src="https://media.licdn.com/dms/image/C5603AQGIZt_45AZYkw/profile-displayphoto-shrink_200_200/0?e=1530748800&v=beta&t=4hHiQ_SOwjrNVppLv29_yveke0Eyu9_uT403uaG9yX4">
-<p>
-I grew up in the great state of Wisconsin. I graduated from a Olivet Nazarene University in Illinois in 2012 with a B.S. in Criminal Justice. After that I spent 4 years in the Army as a Logistics Officer. The majority of my service was at Fort Riley, KS and southern Afghanistan. After leaving the army I was a distribution center mananger, but I decided to move on to bigger and better things!
-</p>
+    <p>     A lifelong experimenter and tinkerer. Since I was young I have enjoyed building computers, designing radio antennas, and experimenting with computers and software. I also enjoy camping, traveling and hunting.</p>
+    <p>     I grew up in the great state of Wisconsin, and I currently live near Kansas City. I graduated from a Olivet Nazarene University in Illinois in 2012 with a B.S. in Criminal Justice. After that I spent 4 years in the Army as a Logistics Officer. The majority of my service was at Fort Riley, KS and southern Afghanistan. After leaving the army I was a distribution center manager, but I decided to pursue my lifelong dream of working with tech and computers!</p>
 
 </div></center>
 <!-- portfolio page-->
 <center><div id="portfolio" style="display:none">
 <div id="subtitle">Portfolio</div>
-<br>
+<hr>
 <br>
 <!-- portfolio images -->
 <ol class="list">
@@ -83,7 +82,7 @@ I grew up in the great state of Wisconsin. I graduated from a Olivet Nazarene Un
 <!-- contact page -->
 <center><div id="Contact" style="display:none">
 <div id="subtitle">Contact</div>
-<br>
+<hr>
 <br>
 <div class="container">
   <form action="/action_page.php">
