--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Student Bio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script>
             // menu function for about me
          function firstFunction() {
@@ -31,14 +32,11 @@
 
 
             }
-
-
-
     </script>
 
     <!-- top menu -->
     <center><div id="Topnav">
-        <p id="title">David Hoffmann</p>
+        <h1 id="title">David Hoffmann</h1>
         <button class="nav" onclick="firstFunction()">About</button>
         <button class="nav" onclick="secondFunction()">Portfolio</button>
         <button class="nav" onclick="thirdFunction()">Contact</button>
@@ -56,8 +54,10 @@
 <hr>
 <!-- about me profile img -->
 <img id="profile_img" src="https://media.licdn.com/dms/image/C5603AQGIZt_45AZYkw/profile-displayphoto-shrink_200_200/0?e=1530748800&v=beta&t=4hHiQ_SOwjrNVppLv29_yveke0Eyu9_uT403uaG9yX4">
-    <p>     A lifelong experimenter and tinkerer. Since I was young I have enjoyed building computers, designing radio antennas, and experimenting with computers and software. I also enjoy camping, traveling and hunting.</p>
-    <p>     I grew up in the great state of Wisconsin, and I currently live near Kansas City. I graduated from a Olivet Nazarene University in Illinois in 2012 with a B.S. in Criminal Justice. After that I spent 4 years in the Army as a Logistics Officer. The majority of my service was at Fort Riley, KS and southern Afghanistan. After leaving the army I was a distribution center manager, but I decided to pursue my lifelong dream of working with tech and computers!</p>
+    <br>
+    <p>A lifelong experimenter and tinkerer. Since I was young I have enjoyed building computers, designing radio antennas, and experimenting with technology. I also enjoy camping, traveling and hunting.</p>
+    <br>
+    <p>I grew up in the great state of Wisconsin, and I currently live near Kansas City. I graduated from a Olivet Nazarene University in Illinois in 2012 with a B.S. in Criminal Justice. After that I spent 4 years in the Army as a Logistics Officer. The majority of my service was at Fort Riley, KS and southern Afghanistan. After leaving the army I was a distribution center manager, but I decided to pursue my lifelong dream of working with tech and computers!</p>
 
 </div></center>
 <!-- portfolio page-->
